syntax = "proto3";

package in_toto_attestation.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/adityasaky/in-toto-attestation/go/v1";
option java_package = "io.github.intoto.attestation.v1";

// Proto representation of the in-toto v1 ResourceDescriptor.
// https://github.com/in-toto/attestation/blob/main/spec/v1/resource_descriptor.md
// Validation of all fields is left to the users of this proto.
message ResourceDescriptor {
  string name = 1;

  string uri = 2;

  map<string, string> digest = 3;

  bytes content = 4;

  string downloadLocation = 5;

  string mediaType = 6;

  map<string, google.protobuf.Struct> annotations = 7;
}
